samples/_failures_safe/1761797901_4e4ebe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5315e9c0.c: In function ‘main’:
./samples/SAFE/__tmp_5315e9c0.c:152:13: error: expected declaration or statement at end of input
  152 |             print_matrix(&result);
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_5315e9c0.c:152:13: error: expected declaration or statement at end of input
